adding blog post for week 8 and 11

--- a/_posts/2024-03-31-week10.md
+++ b/_posts/2024-03-31-week10.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Week 7
+title: Week 10
 ---
 
-## Group project progress report 
+## Group project progress report contributing to documentation 
 
 In the last few weeks, my team has decided to use pandas for our open-source project. The first major challenge our team faced was actually setting up a development environment. We all had trouble with each method of creating the development environment. However, by reaching out to the community they have on Slack, we were able to resolve the issues. After setting up the dev environment, we collectively decided to contribute to some documentation issues first.
 <!--more-->
